--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
         "geo",
         "eindhoven"
     ],
-    "dependencies": {
-
-    },
+    "dependencies": {},
     "devDependencies": {
         "gulp": "3.8.1",
         "connect": "2.14.4",
         "canvas": "1.2.1"
+    },
+    "scripts": {
+        "server": "node ./build/server.js",
+        "update": "node ./build/create-script.js",
+        "import": "node ./build.js"
     },
     "license": "GPL"
 }
